--- a/src/package.json
+++ b/src/package.json
@@ -38,6 +38,7 @@
     "next-themes": "^0.2.1",
     "openai": "^4.14.2",
     "postcss": "^8.4.31",
+    "puppeteer": "^22.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
